# coreutils

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/cat/: main.cpp
src/echo/: main.cpp
src/mkdir/: main.cpp
src/sleep/: main.cpp
